fix meters layout on mobile

--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -118,9 +118,12 @@ nav.top, header
   #needs-meters
     width: 100%
     padding: 0 1rem
+    align-self: center
     @include media-breakpoint-down(sm)
+      align-self: normal
       padding: 0
       margin-top: 1rem
+      width: 93vw
     
   
   
@@ -373,7 +376,7 @@ input.search
     text-align: center
 
 .scores
-  min-width: 75px
+  min-width: 100px
 
 .pointer:hover
   cursor: pointer
